--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "datatypes"
   ],
   "author": "Dwi Rizki Irawan <dwi.rizki.irawan@gmail.com>",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/drizki/jenis.git"
+  },
   "license": "MIT"
 }
