--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Data type checker utility",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "keywords": [
     "data",
@@ -18,8 +18,18 @@
   ],
   "author": "Dwi Rizki Irawan <dwi.rizki.irawan@gmail.com>",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/drizki/jenis.git"
+    "type": "git",
+    "url": "https://github.com/drizki/jenis.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.17.0",
+    "jest": "^24.7.1"
+  }
 }
